[package]
name = "scan_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]
[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } 
tokio = { version = "1.25.0", features = ["full"] }
anyhow = "1.0.69"
walkdir = "2.3.2"
metaflac = "0.2.5"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls" ] }
chrono = "0.4.23"
tokio-stream = "0.1.12"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-appender = "0.2.2"
[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
[dependencies.sea-orm]
version = "0.11.0" # sea-orm version
features = [
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-sqlite",
]
